# tftp-void

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  serve-folder.c  serve-in-memory.c
lib/: CMakeLists.txt  tftpv_server.c  tftpv_server.h
